fix horizontal overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     background: var(--color-primary);
+    overflow-x: hidden;
   }
 
   h1 {
